--- a/partition/index.html
+++ b/partition/index.html
@@ -1,12 +1,8 @@
 
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <link type="text/css" rel="stylesheet" href="style.css"/>
-    <script type="text/javascript" src="d3/d3.js"></script>
-    <script type="text/javascript" src="d3/d3.layout.js"></script>
-    <style type="text/css">
+<meta charset="utf-8">
+<style>
+
 
 .chart {
   display: block;
@@ -31,15 +27,9 @@ text {
 }
 
     </style>
-  </head>
   <body>
-    <div id="body">
-      <div id="footer">
-        d3.layout.partition
-        <div class="hint">click or option-click to descend or ascend</div>
-      </div>
-    </div>
-    <script type="text/javascript">
+    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script>
 
 var w = 1120,
     h = 600,
