--- a/bar3/index.html
+++ b/bar3/index.html
@@ -17,6 +17,51 @@ Chart.defaults.global.responsive = true
 Chart.defaults.global.legend.display= false
 Chart.defaults.global.maintainAspectRatio = true
 
+Chart.defaults.scale = {
+		display: true,
+		position: "left",
+
+		// grid line settings
+		gridLines: {
+			display: true,
+			color: "rgba(0, 0, 0, 0.1)",
+			lineWidth: 1,
+			drawBorder: true,
+			drawOnChartArea: true,
+			drawTicks: true,
+			tickMarkLength: 10,
+			zeroLineWidth: 1,
+			zeroLineColor: "rgba(0,0,0,0.25)",
+			offsetGridLines: false
+		},
+
+		// scale label
+		scaleLabel: {
+			// actual label
+			labelString: '',
+
+			// display property
+			display: false
+		},
+
+		// label settings
+		ticks: {
+			beginAtZero: false,
+			minRotation: 0,
+			maxRotation: 50,
+			mirror: false,
+			padding: 10,
+			reverse: false,
+			display: true,
+			autoSkip: true,
+			autoSkipPadding: 0,
+			labelOffset: 0,
+			callback: function(value) {
+				return '' + value;
+			}
+		}
+	};
+
 // Chart.defaults.global.defaultFontSize = 10
 
 var ctx = document.getElementById("bar3");
@@ -39,8 +84,16 @@ var myChart = new Chart(ctx, {
     options: {
       scales:{
           xAxes: [{
-            display: false
-        }]
+            display: true
+        }],
+          yAxes: [{
+                      display: true,
+                      ticks: {
+
+                      }
+
+                  }]
+
       },
       tooltips: {
           callbacks: {
