--- a/linechart8/index.html
+++ b/linechart8/index.html
@@ -10,8 +10,7 @@
     <body>
 
 
-<canvas id="stackedbar5" width=auto max-height="4
-00"></canvas>
+<canvas id="stackedbar5" width=auto max-height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -36,136 +35,140 @@ var myChart = new Chart(ctx, {
             hoverBackgroundColor: "#B2FF59",
             hoverBorderColor: "#eeeeee",
             data: [28.12,27.78,27.01,27.29]
-        },
-        {
-          label: 'Miscellaneous',
-          fill: false,
-          backgroundColor: "#607D8B",
-          borderColor: "#607D8B",
-          borderWidth: 0,
-          hoverBackgroundColor: "#607D8B",
-          hoverBorderColor: "#eeeeee",
-          data: [9.70,10.76,12.60,13.85]
-      },
-      {
-        label: 'Department of Social Services',
-        fill: false,
-        backgroundColor:"#FFD740",
-        borderColor: "#FFD740",
-        borderWidth: 0,
-        hoverBackgroundColor: "#FFD740",
-        hoverBorderColor: "#eeeeee",
-        data: [13.23,13.22,12.69,12.19]
-    },
-    {
-      label: 'Pension Contributions',
-      fill: false,
-      backgroundColor:"#B0BEC5",
-      borderColor: "#B0BEC5",
-      borderWidth: 0,
-      hoverBackgroundColor: "#B0BEC5",
-      hoverBorderColor: "#eeeeee",
-      data: [11.50,11.63,11.19,10.90]
-  },
-  {
-    label: 'Police Department',
-    fill: false,
-    backgroundColor:"#18FFFF",
-    borderColor: "#18FFFF",
-    borderWidth: 0,
-    hoverBackgroundColor: "#18FFFF",
-    hoverBorderColor: "#eeeeee",
-    data: [6.68,6.65,6.26,6.31]
-},
-{
-  label: 'Admin. for Children Services',
-  fill: false,
-  backgroundColor:"#7C4DFF",
-  borderColor: "#7C4DFF",
-  borderWidth: 0,
-  hoverBackgroundColor: "#7C4DFF",
-  hoverBorderColor: "#eeeeee",
-  data: [4.03,3.89,3.78,3.67]
-},
-{
-  label: 'Debt Service',
-  fill: false,
-  backgroundColor:"#455A64",
-  borderColor: "#455A64",
-  borderWidth: 0,
-  hoverBackgroundColor: "#455A64",
-  hoverBorderColor: "#eeeeee",
-  data: [4.03,3.89,3.78,3.67]
-},
-{
-  label: 'Fire Department',
-  fill: false,
-  backgroundColor:"#FF5252",
-  borderColor: "#FF5252",
-  borderWidth: 0,
-  hoverBackgroundColor: "#FF5252",
-  hoverBorderColor: "#eeeeee",
-  data: [2.55,2.48,2.32,2.28]
-},
-{
-  label: 'Department of Sanitation',
-  fill: false,
-  backgroundColor:"#FF9800",
-  borderColor: "#FF9800",
-  borderWidth: 0,
-  hoverBackgroundColor: "#FF9800",
-  hoverBorderColor: "#eeeeee",
-  data: [1.93,2.00,1.94,1.95]
-},
-{
-  label: 'Department of Health & Mental Hygiene',
-  fill: false,
-  backgroundColor:"#40C4FF",
-  borderColor: "#40C4FF",
-  borderWidth: 0,
-  hoverBackgroundColor: "#40C4FF",
-  hoverBorderColor: "#eeeeee",
-  data: [2.25,1.92,1.82,1.68]
-},
-{
-  label: 'Department of Environmental Protection',
-  fill: false,
-  backgroundColor:"#E040FB",
-  borderColor: "#E040FB",
-  borderWidth: 0,
-  hoverBackgroundColor: "#E040FB",
-  hoverBorderColor: "#eeeeee",
-  data: [1.62,1.57,1.52,1.56]
-},
-{
-  label: 'Department of Correction',
-  fill: false,
-  backgroundColor:"#FF3D00",
-  borderColor: "#FF3D00",
-  borderWidth: 0,
-  hoverBackgroundColor: "#FF3D00",
-  hoverBorderColor: "#eeeeee",
-  data: [1.50,1.49,1.43,1.52]
-}
-
-
-
+          },
+          {
+            label: 'Miscellaneous',
+            fill: false,
+            backgroundColor: "#607D8B",
+            borderColor: "#607D8B",
+            borderWidth: 0,
+            hoverBackgroundColor: "#607D8B",
+            hoverBorderColor: "#eeeeee",
+            data: [9.70,10.76,12.60,13.85]
+          },
+          {
+            label: 'Department of Social Services',
+            fill: false,
+            backgroundColor:"#FFD740",
+            borderColor: "#FFD740",
+            borderWidth: 0,
+            hoverBackgroundColor: "#FFD740",
+            hoverBorderColor: "#eeeeee",
+            data: [13.23,13.22,12.69,12.19]
+          },
+          {
+            label: 'Pension Contributions',
+            fill: false,
+            backgroundColor:"#B0BEC5",
+            borderColor: "#B0BEC5",
+            borderWidth: 0,
+            hoverBackgroundColor: "#B0BEC5",
+            hoverBorderColor: "#eeeeee",
+            data: [11.50,11.63,11.19,10.90]
+          },
+          {
+            label: 'Police Department',
+            fill: false,
+            backgroundColor:"#18FFFF",
+            borderColor: "#18FFFF",
+            borderWidth: 0,
+            hoverBackgroundColor: "#18FFFF",
+            hoverBorderColor: "#eeeeee",
+            data: [6.68,6.65,6.26,6.31]
+          },
+          {
+            label: 'Admin. for Children Services',
+            fill: false,
+            backgroundColor:"#7C4DFF",
+            borderColor: "#7C4DFF",
+            borderWidth: 0,
+            hoverBackgroundColor: "#7C4DFF",
+            hoverBorderColor: "#eeeeee",
+            data: [4.03,3.89,3.78,3.67]
+          },
+          {
+            label: 'Debt Service',
+            fill: false,
+            backgroundColor:"#455A64",
+            borderColor: "#455A64",
+            borderWidth: 0,
+            hoverBackgroundColor: "#455A64",
+            hoverBorderColor: "#eeeeee",
+            data: [4.03,3.89,3.78,3.67]
+          },
+          {
+            label: 'Fire Department',
+            fill: false,
+            backgroundColor:"#FF5252",
+            borderColor: "#FF5252",
+            borderWidth: 0,
+            hoverBackgroundColor: "#FF5252",
+            hoverBorderColor: "#eeeeee",
+            data: [2.55,2.48,2.32,2.28]
+          },
+          {
+            label: 'Department of Sanitation',
+            fill: false,
+            backgroundColor:"#FF9800",
+            borderColor: "#FF9800",
+            borderWidth: 0,
+            hoverBackgroundColor: "#FF9800",
+            hoverBorderColor: "#eeeeee",
+            data: [1.93,2.00,1.94,1.95]
+          },
+          {
+            label: 'Department of Health & Mental Hygiene',
+            fill: false,
+            backgroundColor:"#40C4FF",
+            borderColor: "#40C4FF",
+            borderWidth: 0,
+            hoverBackgroundColor: "#40C4FF",
+            hoverBorderColor: "#eeeeee",
+            data: [2.25,1.92,1.82,1.68]
+          },
+          {
+            label: 'Department of Environmental Protection',
+            fill: false,
+            backgroundColor:"#E040FB",
+            borderColor: "#E040FB",
+            borderWidth: 0,
+            hoverBackgroundColor: "#E040FB",
+            hoverBorderColor: "#eeeeee",
+            data: [1.62,1.57,1.52,1.56]
+          },
+          {
+            label: 'Department of Correction',
+            fill: false,
+            backgroundColor:"#FF3D00",
+            borderColor: "#FF3D00",
+            borderWidth: 0,
+            hoverBackgroundColor: "#FF3D00",
+            hoverBorderColor: "#eeeeee",
+            data: [1.50,1.49,1.43,1.52]
+          }
       ]
-
     },
- options: {
-   tooltips: {
-     callbacks: {
-       label: function(tooltipItem, data) {
-					var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
-				return datasetLabel + ': ' + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index] + '%';
+    options: {
+      tooltips: {
+        callbacks: {
+          label: function(tooltipItem, data) {
+            var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
+            return datasetLabel + ': ' + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index] + '%';
+          }
+        }
+      },
+      scales: {
+        yAxes: [{
+          stacked: false,
+          ticks: {
+            beginAtZero:true
+          }
+        }]
       }
-    }
-  }
 
     }
 
-});
+  });
 </script>
     </body>
 </html>
