--- a/linechart8/index.html
+++ b/linechart8/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="stackedbar5" width=auto max-height="400"></canvas>
+<canvas id="linechart8" width=auto max-height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -18,7 +18,7 @@ Chart.defaults.global.tooltips.backgroundColor="grey"
 Chart.defaults.global.maintainAspectRatio = true
 
 
-var ctx = document.getElementById("stackedbar5");
+var ctx = document.getElementById("linechart8");
 
 var myChart = new Chart(ctx, {
     type: 'line',
