--- a/stackedbar3/index.html
+++ b/stackedbar3/index.html
@@ -45,20 +45,27 @@ var myChart = new Chart(ctx, {
             ]
 
     },
- options: {
-        scales: {
-            yAxes: [{
-                stacked: true,
-                ticks: {
-                    beginAtZero:true
-                }
-            }],
-            xAxes: [{
-                stacked: true
-            }]
-        }
-
+    options: {
+      scales: {
+        yAxes: [{
+          stacked: true,
+          ticks: {
+            beginAtZero:true
+          }
+        }],
+        xAxes: [{
+          stacked: true
+        }]
+      }
+    },
+    tooltips: {
+      callbacks: {
+        label: function(tooltipItem, data) {
+          return '$' + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US');
+        },
+      }
     }
+  }
 
 });
 </script>
